<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/lockFragment">

    <fragment
        android:id="@+id/lockFragment"
        android:name="com.y3lc.yourdiary.LockFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_lock">
        <action
            android:id="@+id/action_lockFragment_to_todayFragment"
            app:destination="@id/todayFragment"
            app:popUpTo="@id/lockFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/todayFragment"
        android:name="com.y3lc.yourdiary.TodayFragment"
        android:label="@string/today_title"
        tools:layout="@layout/fragment_today" />
    <fragment
        android:id="@+id/editorFragment"
        android:name="com.y3lc.yourdiary.EditorFragment"
        android:label="@string/editor_title"
        tools:layout="@layout/fragment_editor">
        <argument android:name="entryId" app:argType="string" android:defaultValue="" />
        <argument android:name="wasNew" app:argType="boolean" android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/readerFragment"
        android:name="com.y3lc.yourdiary.ReaderFragment"
        android:label="@string/reader_title"
        tools:layout="@layout/fragment_reader">
        <argument android:name="entryId" app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.y3lc.yourdiary.HistoryFragment"
        android:label="@string/history_title"
        tools:layout="@layout/fragment_history">
        <argument android:name="focusTagFilters" app:argType="boolean" android:defaultValue="false" />
        <argument android:name="selectedDate" app:argType="string" android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.y3lc.yourdiary.CalendarFragment"
        android:label="@string/calendar_title"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/trashFragment"
        android:name="com.y3lc.yourdiary.TrashFragment"
        android:label="@string/trash_title"
        tools:layout="@layout/fragment_trash" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.y3lc.yourdiary.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
</navigation>
