...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/pin_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pinInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="numberPassword"
                android:imeOptions="actionDone"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unlockWithPinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/unlock_with_pin" />

        <com.google.android.material.checkbox.MaterialCheckBox
...
